manifest/build-middleware-review.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.gitlab.com/app: api-managment
    app.gitlab.com/env: review
  labels:
    app: api-middleware
    project: api-management
    tier: backend
  name: api-middleware
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-middleware
    project: api-management
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.gitlab.com/app: api-managment
    app.gitlab.com/env: review
  labels:
    app: api-middleware
    project: api-management
    tier: backend
  name: api-middleware
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api-middleware
      project: api-management
      tier: backend
  template:
    metadata:
      annotations:
        app.gitlab.com/app: api-managment
        app.gitlab.com/env: review
      labels:
        app: api-middleware
        project: api-management
        tier: backend
      name: api-middleware
    spec:
      containers:
      - args:
        - -jar
        - /usr/share/applications/spring-boot.jar
        - --server.port=8080
        command:
        - java
        - -Djava.security.egd=file:/dev/./urandom
        image: docker.io/tabeldata/middleware-openapi:a16b11fb
        imagePullPolicy: IfNotPresent
        name: api-middleware
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 2000m
            memory: 4000Mi
          requests:
            cpu: 10m
            memory: 100Mi
